--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "droppable",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://prak-mtl.github.io/DelimiterTable",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -15,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,6 +38,7 @@
   "devDependencies": {
     "autoprefixer": "^9.7.6",
     "postcss-cli": "^7.1.1",
-    "tailwindcss": "^1.4.1"
+    "tailwindcss": "^1.4.1",
+    "gh-pages": "^2.2.0"
   }
 }
