--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "droppable",
+  "name": "delimiter_table",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://prak-mtl.github.io/DelimiterTable",
